tests/baselines/reference/genericAndNonGenericInheritedSignature2.errors.txt
genericAndNonGenericInheritedSignature2.ts(7,11): error TS2320: Interface 'Hello' cannot simultaneously extend types 'Bar' and 'Foo'.
  Named property 'f' of types 'Bar' and 'Foo' are not identical.


==== genericAndNonGenericInheritedSignature2.ts (1 errors) ====
    interface Foo {
        f(x: any): any;
    }
    interface Bar {
        f<T>(x: T): T;
    }
    interface Hello extends Bar, Foo {
              ~~~~~
!!! error TS2320: Interface 'Hello' cannot simultaneously extend types 'Bar' and 'Foo'.
!!! error TS2320:   Named property 'f' of types 'Bar' and 'Foo' are not identical.
    }
    